# MedianBonus

./: .env.example  .env.test  Dockerfile  Makefile  README.md  docker-compose.yaml  lefthook.yml  pyproject.toml
app/: __main__.py
app/api/: __init__.py  business.py
app/database/: bootstrap.py  session.py
app/domain/business/: __init__.py  entity.py  enum.py  repository.py
app/domain/store/: __init__.py  entity.py
app/factories/: business.py
app/schemas/: business.py  store.py
app/security/: __init__.py  password.py
app/services/: business.py
app/settings/: __init__.py
backend/: Dockerfile  Dockerfile.test  __main__.py  entrypoint_test.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9ddd42cae1f3_.py  9e25ac6d02cc_.py
backend/api/: __init__.py  business.py  customer.py  employee.py  product.py  store.py
backend/app/: __main__.py
backend/app/api/: auth.py  bonus.py  business.py  customer.py  employee.py  order.py  product.py  store.py
backend/database/: base.py  bootstrap.py  session.py
backend/factories/: repository.py  service.py
backend/factoriy/: service.py
backend/schemas/: bonus.py  business.py  customer.py  employee.py  product.py  store.py
backend/service/: bonus.py  business.py  customer.py  employee.py  order.py  product.py  store.py
backend/services/: bonus.py  business.py  customer.py  employee.py  product.py  store.py
backend/settings/: __init__.py  app.py  database.py
backend/tests/: fixture.py
backend/utils/: exception_handler.py
frontend/: Dockerfile
frontend/src/: index.css
(+94 files in other folders)
