[project]
name = "median-bonus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "lefthook>=2.0.15",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.13",
    "black>=25.12.0",
    "mypy>=1.19.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.14.13",
    "black>=25.12.0",
    "mypy>=1.19.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"

select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
]

ignore = [
  "B008", # Depends(...) в аргументах FastAPI
]

exclude = [
  "alembic",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = false
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
